--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "bulma": "^0.9.3",
     "firebase": "^7.15.0",
+    "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^16.13.1",
